vlib/v/checker/tests/selective_const_import.out
vlib/v/checker/tests/selective_const_import.vv:1:15: error: cannot selectively import constant `second` from `time`, import `time` and use `time.second` instead
    1 | import time { second }
      |               ~~~~~~
